cluster/apps/kube-system/cilium/kubernetes-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    io.cilium/lb-ipam-ips: 10.0.10.200
  name: kubernetes-api
  namespace: kube-system
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    k8s-app: kube-apiserver
    tier: control-plane
  ports:
    - name: https
      port: 6443
      protocol: TCP
      targetPort: 6443
